--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 header {
   font-family: Verdana;
   font-size: 14px;
@@ -10,6 +14,7 @@ header {
   height: 80px;
   position: fixed;
   width: 100%;
+  background-color: white;
 }
 
 #logo {
@@ -23,7 +28,7 @@ header {
   display: inline-block;
 }
 
-nav {
+header nav {
   padding-right: 30px;
 }
 
@@ -35,14 +40,22 @@ nav span {
 main {
   display: flex;
   justify-content: space-between;
-  border: 1px solid black;
   padding-top: 116px;
+  width: 1232px;
+  margin: 0 auto 78px auto;
+}
+
+h2 {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 30px;
+  font-weight: bold
 }
 
 .column {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
 }
 
 .column.large {
@@ -52,16 +65,20 @@ main {
 .mainstory {
   display: flex;
   flex-direction: column;
+  margin-top: 16px;
 }
 
 .mainstory span {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-image: url("../photos/img-story-main.png");
   font-family: Georgia;
   font-weight: bold;
   font-size: 40px;
   color: white;
   height: 300px;
-  width: 630px;
+  padding: 0 20px;
 }
 
 .stories {
@@ -78,12 +95,30 @@ main {
 }
 
 .column.small {
+  display: flex;
   width: 240px;
   align-items: flex-start;
+  flex-direction: column;
+  margin: 0;
 }
 
 .news-bites {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
 
+.news-bites .bite {
+  display: block;
+  width: 200px;
+  background-color: WhiteSmoke;
+  font-family: Verdana, sans-serif;
+  font-size: 12px;
+  color: DimGray;
+  border-bottom: 1px solid black;
+  padding: 10px;
+  text-align: left;
+  font-weight: normal;
 }
 
 .narrative {
@@ -101,6 +136,10 @@ main {
   color: white;
   height: 300px;
   width: 300px;
+  margin-top: 15px;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
 .earth.photo-content {
@@ -112,6 +151,10 @@ main {
   color: white;
   height: 300px;
   width: 300px;
+  margin-top: 15px;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
 .camera.photo-content {
@@ -123,4 +166,38 @@ main {
   color: white;
   height: 300px;
   width: 300px;
+  margin-top: 15px;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+footer {
+  display: flex;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 325px;
+  margin: auto;
+}
+
+footer .wordmark {
+  color: white;
+  font-weight: bold;
+  font-family: Verdana;
+  font-size: 14px;
+  display: inline-block;
+  border-right: 2px solid white;
+  padding-right: 30px;
+  margin: auto;
+}
+
+footer nav {
+  display: inline-block;
+  padding-left: 30px;
 }
